Fixed menu-dropdown bug. Previously, in IE7 and in some other unknown cases, the dropdown menus would not display. This has been fixed by combining the menubar and all of the main page content into the same  cl-content-background div.
Thanks to pointers in this page I was able to get on the right track: http://jonathanstegall.com/2009/01/15/ie-z-index-bug-with-css-dropdown-menu/

--- a/rs/templates/common_helpers/footer.html
+++ b/rs/templates/common_helpers/footer.html
@@ -26,8 +26,8 @@
 # limitations under the License.
 ################################################################################
 -->
-
-<div class="grid_12 cl-footer" id="id-footer">
+<div class="cl-clear"></div>
+<div class="cl-footer" id="id-footer">
     <div class="grid_6 alpha cl-left-text info-link-footer-format">
         <div class="cl-padding-5px">
             &copy; 2010 <a href="http://{{ company_www }}">{{ company_name }}</a> - {{ support_email_address }}
@@ -47,7 +47,7 @@
 
 <!-- Please do not remove the "Powered by LexaLink" icon and link to the LexaLink website -->
 <!-- Removing this link will be considered a violation of the licensing agreement. -->
-<div class="grid_12 cl-center-text" id="id-lexalink_container">
+<div class="cl-center-text" id="id-lexalink_container">
     <br>
     <a href="http://www.lexalink.com"><img src="/{{ live_static_dir }}/img/LexaLink_button.png"
      alt="Powered by the LexaLInk social network and dating platform for the Google App Engine"></a>
