Added $.button() styling to the search form submit button

--- a/rs/templates/user_main_helpers/simple_search_form.html
+++ b/rs/templates/user_main_helpers/simple_search_form.html
@@ -75,6 +75,8 @@
             $("#id-search-by-name-section").hide();
             e.preventDefault();
         });
+
+        $(".cl-search-button").button();
     });
 
 
