styled the profile search button with css, and modified the import order of css files to ensure that more specific files over-ride more general (ie. discrete_common.css now is listed after site_common.css). In CSS, the last definition takes precedence.

--- a/rs/static/css/user_main.css
+++ b/rs/static/css/user_main.css
@@ -565,6 +565,11 @@ td.cl-registration-big-prompt-td {
         background-color: transparent;
 }
 
+/* change default search border button since it is on a black background it needs to be darker */
+.cl-search-button {
+    border: 1px solid #999;
+}
+
 
 .cl-highlight_border {
     border: solid 3px #FF0000;
