--- a/rs/templates/user_main_helpers/search_inline_javascript.html
+++ b/rs/templates/user_main_helpers/search_inline_javascript.html
@@ -58,11 +58,11 @@
 
 
         $("#id-simple-search-form").submit(function() {
-            
+
             if (sufficient_time_has_passed_since_last_search(1000)) {
                 // if values are not selected, don't submit them - and also has the added benefit of graying-out these values when submit is pressed
-                $(this).find(':input[value=""]').attr("disabled", "disabled");
-                $(this).find(':input[value="----"]').attr("disabled", "disabled");
+                $(this).find('select option[value=""]').attr("disabled", "disabled");
+                $(this).find('select option[value="----"]').attr("disabled", "disabled");
 
                 $("#id-simple-search-form").append('<input type="hidden" name="rnd" value="' + rnd() + '" />');
             }
