--- a/rs/templates/login_helpers/login.html
+++ b/rs/templates/login_helpers/login.html
@@ -58,6 +58,7 @@
      </div></div>
 
 <script type="text/javascript">
+    var login_errors_dict = [];
 
     function handle_registered_login_form() {
 
